# netxduo

.github/workflows/: azure_iot_test.yml
scripts/: build_azure_iot.sh  build_azure_iot_win32.sh  checkout_submodules.sh  install.sh  install_softwares.sh
test/cmake/azure_iot/: CMakeLists.txt
test/cmake/azure_iot/configs/: azure_rtos_tests.cmake
test/regression/azure_iot/.build/: checkout_submodules.sh  init_vm_network.sh
test/regression/azure_iot/project/cmake/configs/: azure_rtos_src.cmake  azure_rtos_tests.cmake
test/regression/azure_iot/project/cmake/validation/: CMakeLists.txt  nx_user.h
